--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <p>Tengo x años y un perrito llamado miky </p>
 <p>Mi sueño es ser administrador de sistemas en 
-    La Moncloa </p>
+    La Casa Blanca </p>
 
 
 
